# azure-ml

./: .gitignore  auto_ml.py  conda.yml  create_job_for_training_script.py  pyproject.toml
src/: custom_training_script.py
